// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles JavaScript 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
              Asset     Size  Chunks             Chunk Names
    myBundle.min.js  2.42 kB       0  [emitted]  default
myBundle.min.js.map  13.4 kB       0  [emitted]  default
   [0] multi ./js/script.js 28 bytes {0} [built]
   [1] ./js/script.js 1.14 kB {0} [built]
   [2] ./js/Component.js 2.44 kB {0} [built]


Compiled successfully!
[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript 2`] = `
"define(function(){return function(e){function t(r){if(n[r])return n[r].exports;var o=n[r]={i:r,l:!1,exports:{}};return e[r].call(o.exports,o,o.exports,t),o.l=!0,o.exports}var n={};return t.m=e,t.c=n,t.d=function(e,n,r){t.o(e,n)||Object.defineProperty(e,n,{configurable:!1,enumerable:!0,get:r})},t.n=function(e){var n=e&&e.__esModule?function(){return e.default}:function(){return e};return t.d(n,\\"a\\",n),n},t.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},t.p=\\"\\",t(t.s=0)}([function(e,t,n){e.exports=n(1)},function(e,t,n){\\"use strict\\";function r(e,t){if(!(e instanceof t))throw new TypeError(\\"Cannot call a class as a function\\")}Object.defineProperty(t,\\"__esModule\\",{value:!0});var o=n(2),u=function(){function e(e,t){for(var n=0;n<t.length;n++){var r=t[n];r.enumerable=r.enumerable||!1,r.configurable=!0,\\"value\\"in r&&(r.writable=!0),Object.defineProperty(e,r.key,r)}}return function(t,n,r){return n&&e(t.prototype,n),r&&e(t,r),t}}(),i=function(){function e(){r(this,e),console.log(\\"init class\\")}return u(e,[{key:\\"method\\",value:function(){console.log(o.a)}}]),e}();t.default=i},function(e,t,n){\\"use strict\\";function r(e,t){if(!(e instanceof t))throw new TypeError(\\"Cannot call a class as a function\\")}function o(e,t){if(!e)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return!t||\\"object\\"!=typeof t&&\\"function\\"!=typeof t?e:t}function u(e,t){if(\\"function\\"!=typeof t&&null!==t)throw new TypeError(\\"Super expression must either be null or a function, not \\"+typeof t);e.prototype=Object.create(t&&t.prototype,{constructor:{value:e,enumerable:!1,writable:!0,configurable:!0}}),t&&(Object.setPrototypeOf?Object.setPrototypeOf(e,t):e.__proto__=t)}var i=function(){function e(e,t){for(var n=0;n<t.length;n++){var r=t[n];r.enumerable=r.enumerable||!1,r.configurable=!0,\\"value\\"in r&&(r.writable=!0),Object.defineProperty(e,r.key,r)}}return function(t,n,r){return n&&e(t.prototype,n),r&&e(t,r),t}}(),c=function(e){function t(){var e,n,u,i;r(this,t);for(var c=arguments.length,a=Array(c),f=0;f<c;f++)a[f]=arguments[f];return n=u=o(this,(e=t.__proto__||Object.getPrototypeOf(t)).call.apply(e,[this].concat(a))),u.handleClick=function(){u.setState({hey:!0})},i=n,o(u,i)}return u(t,e),i(t,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),t}(React.Component);t.a=c}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stderr": "[js_myBundle] (!) Errors were found
js/script.js
[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Error: Errors were found
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/js/script.js
  15:1  error  Parsing error: Unexpected token

  13 |
  14 | }
> 15 |
     | ^

✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`Lints JavaScript with webpack 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Error: Webpack compilation failed
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
              Asset     Size  Chunks  Chunk Names
    myBundle.min.js  2.48 kB       0  default
myBundle.min.js.map  13.7 kB       0  default
   [0] multi ./js/script.js 28 bytes {0} [built]
   [1] ./js/script.js 1.23 kB {0} [built] [1 error]
   [2] ./js/Component.js 2.44 kB {0} [built] [1 error]


Failed to compile.

./js/Component.js

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/js/Component.js
  11:3   error  Opening curly brace does not appear on the same line as controlling statement  brace-style
  12:13  error  Multiple spaces found before '<'                                               no-multi-spaces

✖ 2 problems (2 errors, 0 warnings)
  2 errors, 0 warnings potentially fixable with the \`--fix\` option.

 @ ./js/script.js 7:0-39
 @ multi ./js/script.js

./js/script.js

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/js/script.js
   3:24  error    Multiple spaces found before '\\"./Component.js\\"'                                no-multi-spaces
   5:10  error    'test' is defined but never used                                               no-unused-vars
   5:19  error    A space is required after ','                                                  comma-spacing
   6:1   error    Expected indentation of 2 spaces but found 3                                   indent
  11:5   warning  Unexpected console statement                                                   no-console
  15:5   warning  Unexpected console statement                                                   no-console
  15:19  error    Multiple spaces found before '\\"some method\\"'                                   no-multi-spaces
  15:33  error    A space is required after ','                                                  comma-spacing
  15:33  error    There should be no space before ','                                            comma-spacing
  19:3   error    Opening curly brace does not appear on the same line as controlling statement  brace-style
  20:14  error    Expected '===' and instead saw '=='                                            eqeqeq

✖ 11 problems (9 errors, 2 warnings)
  7 errors, 0 warnings potentially fixable with the \`--fix\` option.

 @ multi ./js/script.js

",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
              Asset     Size  Chunks             Chunk Names
    myBundle.min.js  1.47 kB       0  [emitted]  default
myBundle.min.js.map  12.5 kB       0  [emitted]  default
   [0] multi ./js/index.js 28 bytes {0} [built]
   [1] ./js/index.js 137 bytes {0} [built]
   [2] ./js/imported-javascript.js 1.18 kB {0} [built]
   [3] ./js/imported-typescript.js 459 bytes {0} [built]


Compiled with warnings.

myBundle.min.js from UglifyJs
Dropping __PURE__ call [./js/imported-javascript.js:42,5]
Dropping unused variable B [./js/imported-javascript.js:40,4]
Dropping __PURE__ call [./js/imported-typescript.js:16,23]
Dropping unused variable D [./js/imported-typescript.js:16,4]

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
